--- a/kyuu/composer.json
+++ b/kyuu/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "nesbot/carbon": "^2.45"
     },
     "require-dev": {
         "facade/ignition": "^1.16.4",
